# Advent-of-Code-2022

./: .gitignore  Cargo.toml
src/: main.rs  task_handler.rs
src/tasks/: mod.rs  task1.rs  task10.rs  task11.rs  task12.rs  task13.rs  task2.rs  task3.rs  task4.rs  task5.rs  task6.rs  task7.rs  task8.rs  task9.rs
