[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
itertools = "0.10.5"
nom = "7.1.1"
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }
thiserror = "1.0.37"
